--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                <%= link_to "楽曲一覧", "#", class: "nav-link" %>
+                <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                 <%= link_to "楽曲投稿", "#", class: "nav-link" %>
