楽曲投稿機能作成と一覧表示のサムネイル追加

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-light py-3 mt-auto fixed-bottom">
+<footer class="bg-light py-3 mt-auto">
   <div class="container">
     <ul class="list-inline text-center">
       <li class="list-inline-item"><a href="#">利用規約</a></li>
