--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <%= link_to "VOCALOIDSelection", "/", class: "navbar-brand" %>
         <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
@@ -10,7 +10,7 @@
                 <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
-                <%= link_to "楽曲投稿", "#", class: "nav-link" %>
+                <%= link_to "楽曲投稿", new_song_path, class: "nav-link" %>
                 </li>
                 <li class="nav-item">
                 <%= link_to "マイページ", "#", class: "nav-link" %>
