--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -10,7 +10,7 @@
             <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-            <%= link_to "楽曲投稿", "#", class: "nav-link" %>
+            <%= link_to "楽曲投稿", new_song_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
             <%= link_to "アカウント登録", new_user_path, class: "nav-link" %>
