--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -2,25 +2,28 @@
   <div class="buttons text-center">
     <button class="btn btn-secondary">楽曲作成フォーム</button>
   </div>
-  <div class="list-group-item d-flex justify-content-between align-items-center">
-      <span>動画1</span>
-      <div>
-          <button class="btn btn-primary">サムネ</button>
-          <button class="btn btn-danger">タイトル</button>
-      </div>
-  </div>
-  <div class="list-group-item d-flex justify-content-between align-items-center">
-      <span>動画2</span>
-      <div>
-          <button class="btn btn-primary">サムネ</button>
-          <button class="btn btn-danger">タイトル</button>
-      </div>
-  </div>
-  <div class="list-group-item d-flex justify-content-between align-items-center">
-      <span>動画3</span>
-      <div>
-          <button class="btn btn-primary">サムネ</button>
-          <button class="btn btn-danger">タイトル</button>
-      </div>
-  </div>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+				<th scope="col">サムネイル</th>
+        <th scope="col">タイトル</th>
+        <th scope="col">アーティスト</th>
+        <th scope="col">使用したソフト名</th>
+        <th scope="col">ジャンル</th>
+        <th scope="col">こだわりポイント</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @songs.each do |song| %>
+        <tr>
+					<td><%= image_tag(song.thumbnail_url, width: 150, height: 100) if song.thumbnail_url.present? %></td>
+          <td><%= song.title %></td>
+          <td><%= song.artist %></td>
+          <td><%= song.software_name %></td>
+          <td><%= song.genre&.name %></td>
+          <td><%= song.focus_point&.name %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
