--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,16 +3,10 @@
     <h1>トップページ</h1>
   </div>
 
-  <div class="section mb-4">
-    <h2 class="mb-3">楽曲一覧 お気に入りトップページ</h2>
-    <div class="card p-4">
-      <!-- こちらに楽曲の一覧やお気に入りの表示処理を追加 -->
-      <p>楽曲の内容やお気に入りの詳細が表示されます。</p>
-    </div>
-  </div>
-
   <div class="buttons text-center">
-    <button class="btn btn-primary mr-2">楽曲検索</button>
-    <button class="btn btn-secondary">楽曲作成フォーム</button>
+    <%= link_to "楽曲を探す", songs_path, class: "btn btn-secondary" %>
+  </div>
+  <div class="buttons text-center">
+    <%= link_to "楽曲を投稿する", new_song_path, class: "btn btn-secondary" %>
   </div>
 </div>
