--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group mb-3">
   <div class="buttons text-center">
-    <button class="btn btn-secondary">楽曲作成フォーム</button>
+    <button class="btn btn-secondary">楽曲検索フォーム</button>
   </div>
   <table class="table table-striped">
     <thead>
@@ -16,8 +16,8 @@
     <tbody>
       <% @songs.each do |song| %>
         <tr>
-					<td><%= image_tag(song.thumbnail_url, width: 150, height: 100) if song.thumbnail_url.present? %></td>
-          <td><%= song.title %></td>
+					<td><%= link_to (image_tag(song.thumbnail_url, width: 150, height: 100) if song.thumbnail_url.present?), song_path(song) %></td>
+          <td><%= link_to song.title, song_path(song) %></td>
           <td><%= song.artist %></td>
           <td><%= song.software_name %></td>
           <td><%= song.genre&.name %></td>
