--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -7,6 +7,11 @@
             <iframe class="embed-responsive-item" src="<%= @song.embed_url %>" allowfullscreen referrerpolicy="no-referrer"></iframe>
           </div>
           <h2 class="card-title text-center"><%= @song.title %></h3>
+
+          <div class="d-flex justify-content-around flex-wrap mb-3">
+            <%= render partial: "songs/evaluation_buttons", locals: { song: @song, current_evaluation: @evaluation } %>
+          </div>
+
           <p class="card-text"><strong>アーティスト名:</strong> <%= @song.artist %></p>
           <p class="card-text"><strong>使用したソフト名:</strong> <%= @song.software_name %></p>
           <p class="card-text"><strong>ジャンル:</strong> <%= @song.genre.name %></p>
