基本の検索機能の実装

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group mb-3">
   <div class="buttons text-center">
-    <button class="btn btn-secondary">楽曲検索フォーム</button>
+    <%= render 'search_form', q: @q %>
   </div>
   <table class="table table-striped">
     <thead>
