--- a/app/views/songs/_search_form.html.erb
+++ b/app/views/songs/_search_form.html.erb
@@ -1,6 +1,6 @@
 <%= search_form_for @q, url: songs_path, method: :get, class: "form-inline" do |f| %>
   <%= f.label :title_or_artist_or_software_name_or_genre_name_cont, "検索:" %>
-  <%= f.search_field :title_or_artist_or_software_name_or_genre_name_cont, placeholder: "タイトル、アーティスト、ソフト名、ジャンル", class: "form-control mr-sm-2" %>
+  <%= f.search_field :title_or_artist_or_software_name_or_genre_name_cont, id: "search-field-id", placeholder: "タイトル、アーティスト、ソフト名、ジャンル", class: "form-control mr-sm-2" %>
 
   <%= f.label :focus_point_name_eq, "こだわりポイント別に検索:" %>
   <%= f.collection_select :focus_point_name_eq, FocusPoint.all, :name, :name, include_blank: "選択しない", class: "form-control" %>
