--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,14 @@
-<div class="container mt-5">
-  <div class="text-center mb-5">
-    <h1>トップページ</h1>
-  </div>
+<div class="home-page-background">
+  <div class="container mt-5">
+    <div class="text-center mb-5">
+      <h1>トップページ</h1>
+    </div>
 
-  <div class="buttons text-center">
-    <%= link_to "楽曲を探す", songs_path, class: "btn btn-secondary" %>
-  </div>
-  <div class="buttons text-center">
-    <%= link_to "楽曲を投稿する", new_song_path, class: "btn btn-secondary" %>
+    <div class="buttons text-center">
+      <%= link_to "楽曲を探す", songs_path, class: "btn btn-secondary" %>
+    </div>
+    <div class="buttons text-center">
+      <%= link_to "楽曲を投稿する", new_song_path, class: "btn btn-secondary" %>
+    </div>
   </div>
 </div>
