--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="list-group mb-3">
-  <div class="buttons text-center">
+  <div class="text-center">
     <%= render 'search_form', q: @q %>
   </div>
   <table class="table table-striped">
