--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,10 @@
-<div class="home-page-background">
-  <div class="container mt-5">
-    <div class="text-center mb-5">
-      <h1>トップページ</h1>
-    </div>
+<div class="home-page-background d-flex flex-column justify-content-center align-items-center text-white">
+  <div class="text-center mb-5 overlay">
+    <h1>VOCALOID Selection</h1>
+  </div>
 
-    <div class="buttons text-center">
-      <%= link_to "楽曲を探す", songs_path, class: "btn btn-secondary" %>
-    </div>
-    <div class="buttons text-center">
-      <%= link_to "楽曲を投稿する", new_song_path, class: "btn btn-secondary" %>
-    </div>
+  <div class="buttons text-center">
+    <%= link_to "楽曲を探す", songs_path, class: "btn btn-light m-2" %>
+    <%= link_to "楽曲を投稿する", new_song_path, class: "btn btn-light m-2" %>
   </div>
 </div>
