--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,20 @@
+.app-description {
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  display: inline-block;
+  margin-bottom: -300px;
+  padding: 10px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.bg-opacity {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 0.5rem 1rem;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
 .home-page-background {
   background: url('/assets/puretipe_Hatsune_Miku_best_quality_2020s_pixiv_illustration_viv_0fa5bf82-ba84-4a49-9fb3-13aa9029acb9.png') center center;
   background-size: cover;
