--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "楽曲投稿", new_song_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-        <%= link_to "マイページ", "#", class: "nav-link" %>
+        <%= link_to "マイページ", profile_path(current_user.profile), class: "nav-link" %>
         </li>
         <li class="nav-item">
         <%= link_to "ログアウト", user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
