--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,19 +1,27 @@
-<h1>マイページ</h1>
+<div class="container mt-4 text-center">
+  <h1 class="mb-4">マイページ</h1>
 
-<% if @profile.profile_image_url.present? %>
-  <img src="<%= @profile.profile_image_url %>" alt="Profile Image" style="max-width: 200px;">
-<% else %>
-  <p>プロフィール画像は設定されていません</p>
-<% end %>
+  <div class="row justify-content-center">
+    <div class="col-12 mb-3">
+      <% if @profile.profile_image_url.present? %>
+        <img src="<%= @profile.profile_image_url %>" alt="Profile Image" class="img-fluid rounded-circle" style="max-width: 200px; height: 200px; object-fit: cover;">
+      <% else %>
+        <p>プロフィール画像は設定されていません</p>
+      <% end %>
+    </div>
 
-<p>
-  <strong>ユーザー名:</strong>
-  <%= current_user.name %>
-</p>
+    <div class="col-12">
+      <div class="mb-3">
+        <strong>ユーザー名:</strong>
+        <p><%= current_user.name %></p>
+      </div>
 
-<p>
-  <strong>メールアドレス:</strong>
-  <%= current_user.email %>
-</p>
+      <div class="mb-3">
+        <strong>メールアドレス:</strong>
+        <p><%= current_user.email %></p>
+      </div>
 
-<%= link_to 'Edit Profile', edit_profile_path(@profile) %>
+      <%= link_to 'プロフィール編集', edit_profile_path(@profile), class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
