--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -22,6 +22,8 @@
       </div>
 
       <%= link_to 'プロフィール編集', edit_profile_path(@profile), class: "btn btn-primary" %>
+
+      <%= link_to '投稿した楽曲一覧・編集', my_songs_songs_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
