--- a/app/views/songs/my_songs.html.erb
+++ b/app/views/songs/my_songs.html.erb
@@ -1,6 +1,10 @@
 <div class="container mt-4">
   <h1 class="text-center mb-4">投稿した楽曲</h1>
 
+  <div class="text-center">
+    <%= render 'songs/search_form', q: @q, search_url: my_songs_songs_path %>
+  </div>
+
   <table class="table table-striped">
     <thead>
       <tr>
