楽曲編集機能の修正

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -17,6 +17,10 @@
           <p class="card-text"><strong>ジャンル:</strong> <%= @song.genre.name %></p>
           <p class="card-text"><strong>こだわりポイント:</strong> <%= @song.focus_point.name %></p>
           <p class="card-text"><strong>楽曲の概要:</strong> <%= @song.description %></p>
+
+          <% if current_user == @song.user %>
+            <%= link_to '編集', edit_song_path(@song), class: 'btn btn-primary' %>
+          <% end %>
         </div>
       </div>
     </div>
