確認ダイアログの表示

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -62,7 +62,7 @@
 
 
         <div class="actions">
-          <%= f.submit "投稿する", class: 'btn btn-primary' %>
+          <%= f.submit "投稿する", class: 'btn btn-primary', data: { confirm: "楽曲を投稿します。よろしいですか？" } %>
         </div>
       <% end %>
     </div>
