--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -17,7 +17,7 @@
           </div>
 
           <div class="d-flex justify-content-around flex-wrap mb-3">
-            <%= render partial: "songs/evaluation_buttons", locals: { song: @song, current_evaluation: @evaluation } %>
+            <%= render "evaluation_buttons", locals: { song: @song, current_evaluation: @evaluation } %>
           </div>
 
           <p class="card-text"><strong>アーティスト名:</strong> <%= @song.artist %></p>
