未ログイン時のお気に入りボタンの表示修正

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -9,7 +9,7 @@
           <h2 class="card-title text-center"><%= @song.title %></h3>
 
           <div class="d-flex justify-content-end mb-3">
-            <% if current_user.favorited_songs.include?(@song) %>
+            <% if current_user && current_user.favorited_songs.include?(@song) %>
               <%= render 'unfavorite_button', song: @song %>
             <% else %>
               <%= render 'favorite_button', song: @song %>
