--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -8,10 +8,10 @@
 
     <div class="collapse" id="collapseNotice">
       <div class="card card-body form-inline mx-5">
-        本サービスは、音声合成ソフトウェアを使用して作成された楽曲専用の動画プラットフォームとなっております。
-        投稿される楽曲は、VOCALOID、UTAU、CeVIO、Synthesizer V、VOICEVOX、VOICELOID等の
-        音声合成ソフトが使用されたものであるかご確認の上、投稿して下さい。
-        また、投稿できるのはYouTubeかニコニコ動画に投稿されている動画限定となります。動画視聴ページのURLをフォームにご記入ください。
+        本サービスは、音声合成ソフトウェアを使用して作成された楽曲専用の動画プラットフォームとなっております。<br>
+        楽曲が、VOCALOID、UTAU、CeVIO、Synthesizer V、VOICEVOX、VOICELOID等の
+        音声合成ソフトが使用されたものであるかご確認の上、投稿して下さい。<br>
+        また、投稿できるのはご自身が動画の作成に携わられたもの、もしくはその関係者から投稿を委託された方による、YouTubeかニコニコ動画に公開されている動画のみとなります。動画視聴ページのURLをフォームにご記入ください。<br>
         加えて、元動画のタイトル、概要欄、タグ等に音声合成ソフトに関するワードが含まれているかご確認ください。動画投稿ができない場合があります。
       </div>
     </div>
