--- a/app/views/artists/unfollow.turbo_stream.erb
+++ b/app/views/artists/unfollow.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.replace "follow-button-#{ @artist.id }" do %>
+<%= turbo_stream.replace "unfollow-button-#{ @artist.id }" do %>
   <%= render 'artists/follow_button', artist: @artist %>
 <% end %>
