--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -24,6 +24,7 @@
       <%= link_to 'プロフィール編集', edit_profile_path(@profile), class: "btn btn-primary" %>
       <%= link_to '投稿した楽曲一覧・編集', my_songs_songs_path, class: "btn btn-secondary" %>
       <%= link_to 'お気に入り楽曲', favorites_songs_path, class: "btn btn-secondary" %>
+      <%= link_to 'フォロー中のアーティスト', following_artists_user_path(current_user), class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
