--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     </div>
 
-    <div class="d-flex justify-content-end mb-3">
+    <div class="d-flex justify-content-center mb-3">
       <% if current_user && current_user.following.include?(@artist) %>
         <%= render 'artists/unfollow_button', artist: @artist %>
       <% else %>
