--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,9 +9,11 @@
         <li class="nav-item">
         <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-        <%= link_to "楽曲投稿", new_song_path, class: "nav-link" %>
-        </li>
+        <% if current_user && current_user.artist? %>
+          <li class="nav-item">
+            <%= link_to "楽曲投稿", new_song_path, class: "nav-link" %>
+          </li>
+        <% end %>
         <li class="nav-item">
         <%= link_to "マイページ", profile_path(current_user.profile), class: "nav-link" %>
         </li>
