--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,10 @@
+<% set_meta_tags twitter: {
+  card: "summary_large_image",
+  site: "@PureTipe",
+  title: @song.title,
+  description: @song.description,
+  image: @song.thumbnail_url
+} %>
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
@@ -14,6 +21,11 @@
             <% else %>
               <%= render 'favorite_button', song: @song %>
             <% end %>
+          </div>
+
+          <div class="d-flex justify-content-end mb-3">
+            <% twitter_share_link = "https://twitter.com/intent/tweet?text=#{CGI.escape(@song.title)}&url=#{request.original_url}&hashtags=VOCALOID" %>
+            <%= link_to 'Xで共有', twitter_share_link, class: 'btn btn-dark', target: '_blank', rel: 'noopener noreferrer' %>
           </div>
 
           <div class="d-flex justify-content-around flex-wrap mb-3">
