--- a/app/views/artists/_follow_button.html.erb
+++ b/app/views/artists/_follow_button.html.erb
@@ -1,1 +1,1 @@
-<%= button_to 'フォローする', follow_artist_path(artist), id: "follow-button-#{artist.id}", method: :post, class: "btn btn-primary" %>
+<%= button_to 'フォローする', follow_artist_path(artist), id: "follow-button-#{artist.id}", class: "btn btn-primary", data: { turbo: true } %>
