--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,7 +2,6 @@
   card: "summary_large_image",
   site: "@PureTipe",
   title: @song.title,
-  description: @song.description,
   image: @song.thumbnail_url
 } %>
 <div class="container mt-4">
@@ -32,7 +31,14 @@
             <%= render "evaluation_buttons", locals: { song: @song, current_evaluation: @evaluation } %>
           </div>
 
-          <p class="card-text"><strong>アーティスト名:</strong> <%= link_to @song.artist, artist_path(@song.user) %></p>
+          <p class="card-text">
+            <strong>アーティスト名:</strong> <%= link_to @song.user.name, artist_path(@song.user) %>
+            <% if current_user && current_user.following.include?(@song.user) %>
+              <%= render 'artists/unfollow_button', artist: @song.user %>
+            <% else %>
+              <%= render 'artists/follow_button', artist: @song.user %>
+            <% end %>
+          </p>
           <p class="card-text"><strong>使用したソフト名:</strong> <%= @song.software_name %></p>
           <p class="card-text"><strong>ジャンル:</strong> <%= @song.genre.name %></p>
           <p class="card-text"><strong>こだわりポイント:</strong> <%= @song.focus_point.name %></p>
