ページネーションのレイアウト修正

--- a/app/views/users/following_artists.html.erb
+++ b/app/views/users/following_artists.html.erb
@@ -15,6 +15,8 @@
         </li>
       <% end %>
     </ul>
-    <%= paginate @artists %>
+    <div class="pagination">
+      <%= paginate @artists %>
+    </div>
   <% end %>
 </div>
