--- a/app/views/users/following_artists.html.erb
+++ b/app/views/users/following_artists.html.erb
@@ -10,7 +10,7 @@
             <% if artist.profile&.profile_image_url&.url.present? %>
               <%= image_tag artist.profile.profile_image_url.url, alt: "アイコン", style: "width: 100px; height: 100px; border-radius: 50%; margin-right: 15px;" %>
             <% end %>
-            <span class="btn btn-primary"><%= artist.name %></span>
+            <span class="btn btn-info"><%= artist.name %></span>
           <% end %>
         </li>
       <% end %>
