--- a/app/views/songs/_favorite_button.html.erb
+++ b/app/views/songs/_favorite_button.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'お気に入り登録する', song_favorites_path(song), id: "favorite_button_#{song.id}", data: { turbo_method: :post }, class: 'btn btn-primary' %>
+<%= link_to 'お気に入り登録する', song_favorites_path(song), id: "favorite_button_#{song.id}", data: { turbo_method: :post }, class: 'btn btn-info' %>
