--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -38,7 +38,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "更新する", class: "btn btn-primary" %>
+          <%= f.submit "更新する", class: "btn btn-info" %>
           <%= link_to '削除', @song, method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'btn btn-danger' %>
         </div>
       <% end %>
