--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -42,7 +42,9 @@
           <p class="card-text"><strong>使用したソフト名:</strong> <%= @song.software_name %></p>
           <p class="card-text"><strong>ジャンル:</strong> <%= @song.genre.name %></p>
           <p class="card-text"><strong>こだわりポイント:</strong> <%= @song.focus_point.name %></p>
-          <p class="card-text"><strong>楽曲の概要:</strong> <%= @song.description %></p>
+          <p class="card-text">
+            <strong>楽曲の概要:</strong> <%= simple_format(@song.description) %>
+          </p>
 
           <% if current_user == @song.user %>
             <%= link_to '編集', edit_song_path(@song), class: 'btn btn-info' %>
