--- a/app/views/static_pages/terms_of_service.html.erb
+++ b/app/views/static_pages/terms_of_service.html.erb
@@ -1,9 +1,9 @@
-<div class="terms">
+<div class="container mt-3">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h1 class="text-center">利用規約</h1>
+      <h1>利用規約</h1>
 
-      <p class="preamble">
+      <p>
         この利用規約(以下、「本規約」といいます。)は、本サービス(本サイトを含むものとし、以下、特に両者を区別しません。)の利用条件を定めるものです。本規約は、本サービスを利用するすべてのユーザーに適用されます。</p>
 
       <h2>本規約への同意</h2>
