--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,11 +3,15 @@
 
   <div class="row justify-content-center">
     <div class="col-12 mb-3">
-      <% if @profile.profile_image_url.present? %>
-        <img src="<%= @profile.profile_image_url %>" alt="Profile Image" class="img-fluid rounded-circle" style="max-width: 200px; height: 200px; object-fit: cover;">
-      <% else %>
-        <p>プロフィール画像は設定されていません</p>
-      <% end %>
+      <div class="d-flex justify-content-center">
+        <% if @profile.profile_image_url.present? %>
+          <div style="width: 200px; height: 200px; border-radius: 50%; overflow: hidden;">
+            <img src="<%= @profile.profile_image_url %>" alt="Profile Image" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
+          </div>
+        <% else %>
+          <p>プロフィール画像は設定されていません</p>
+        <% end %>
+      </div>
     </div>
 
     <div class="col-12">
