--- a/app/views/songs/_search_form.html.erb
+++ b/app/views/songs/_search_form.html.erb
@@ -8,5 +8,5 @@
   <%= f.label :s, "評価ポイントの多い順に検索:" %>
   <%= f.select :s, options_for_select(evaluation_type_options, params[:q] ? params[:q][:s] : nil), include_blank: '選択しない' %>
 
-  <%= f.submit "検索", class: "btn btn-secondary my-2 my-sm-0" %>
+  <%= f.submit "検索", class: "btn btn-info my-2 my-sm-0" %>
 <% end %>
