--- a/app/views/users/following_artists.html.erb
+++ b/app/views/users/following_artists.html.erb
@@ -8,7 +8,12 @@
         <li class="mb-3">
           <%= link_to artist_path(artist), class: "d-flex align-items-center text-decoration-none" do %>
             <% if artist.profile&.profile_image_url&.url.present? %>
-              <%= image_tag artist.profile.profile_image_url.url, alt: "アイコン", style: "width: 100px; height: 100px; border-radius: 50%; margin-right: 15px;" %>
+              <div style="width: 100px; height: 100px; border-radius: 50%; overflow: hidden; margin-right: 15px;">
+                <%= image_tag artist.profile.profile_image_url.url, 
+                              alt: "アイコン", 
+                              class: "img-fluid", 
+                              style: "width: 100%; height: 100%; object-fit: cover;" %>
+              </div>
             <% end %>
             <span class="btn btn-info"><%= artist.name %></span>
           <% end %>
