--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,11 +1,11 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <%= link_to "VOCALOIDSelection", "/", class: "navbar-brand" %>
-    <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
+    <%= link_to "VOCALOID Selection", "/", class: "navbar-brand ms-2" %>
+    <button class='navbar-toggler me-3' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto main-nav align-items-center">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
         <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
         </li>
