--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,13 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <%= link_to "VOCALOID Selection", "/", class: "navbar-brand ms-2" %>
-    <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
+    <button class='navbar-toggler me-2' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-        <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
+          <%= link_to "楽曲一覧", songs_path, class: "nav-link" %>
         </li>
         <% if current_user && current_user.artist? %>
           <li class="nav-item">
@@ -15,10 +15,10 @@
           </li>
         <% end %>
         <li class="nav-item">
-        <%= link_to "マイページ", profile_path(current_user.profile), class: "nav-link" %>
+          <%= link_to "マイページ", profile_path(current_user.profile), class: "nav-link" %>
         </li>
         <li class="nav-item">
-        <%= link_to "ログアウト", user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+          <%= link_to "ログアウト", user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
         </li>
       </ul>
     </div>
