Xカードの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="VOCALOID Selection">
+    <meta name="twitter:description" content="本サービスはVOCALOID等の音声合成ソフトを使用して作成された楽曲専用の動画プラットフォームです">
+    <meta name="twitter:image" content="https://www.vocaloidselection.com/assets/puretipe_Hatsune_Miku_best_quality_2020s_pixiv_illustration_viv_0fa5bf82-ba84-4a49-9fb3-13aa9029acb9.png">
+
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
