お気に入り楽曲一覧の表示修正

--- a/app/views/songs/favorites.html.erb
+++ b/app/views/songs/favorites.html.erb
@@ -3,9 +3,13 @@
     <%= render 'songs/search_form', q: @q, search_url: favorites_songs_path %>
   </div>
 
-  <%= render 'songs/songs_table', songs: @songs %>
+  <% if @songs.present? %>
+    <%= render 'songs/songs_table', songs: @songs %>
 
-  <div class="pagination">
-    <%= paginate @songs, theme: 'bootstrap-5' %>
-  </div>
+    <div class="pagination">
+      <%= paginate @songs, theme: 'bootstrap-5' %>
+    </div>
+  <% else %>
+    <p>お気に入り登録した楽曲はありません。</p>
+  <% end %>
 </div>
