jsファイルビルド

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,16 +2,15 @@
 @import "home";
 
 .ui-autocomplete {
-  z-index: 1050; // Bootstrapのモーダルなどの上に表示
+  z-index: 1050;
   max-height: 200px;
   overflow-y: auto;
   border: 1px solid #ddd;
   background-color: white;
   padding: 0;
-  list-style-type: none; // リストスタイルをリセット
+  list-style-type: none;
 }
 
-/* オートコンプリート項目のスタイル */
 .ui-menu-item {
   padding: 0.5rem 1rem;
   cursor: pointer;
@@ -19,5 +18,9 @@
 
 .ui-menu-item:hover {
   background-color: #f8f8f8;
+}
+
+.ui-helper-hidden-accessible {
+  display: none !important;
 }
 
